# upback

./: .gitignore  pyproject.toml  readme.md  run.bat  run.sh
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: code_quality.yml  pr-cleanup.yml
samples/nginx-service/: Dockerfile
samples/other-application-service/config/: config.yaml
src/: app.py  facade.py
src/config/: global_exception_handler.py
src/constants/: constants.py
src/database/: database.py
src/models/: models.py
src/scheduled/: scheduled.py
src/services/: synchronization_service.py
src/static/css/: colors.css  toggle.css
src/templates/: _navbar.html  add_tracked_app.html  tracked_app.html
src/upback/: app.py
src/upback.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/upback/config/: global_exception_handler.py
src/upback/database/: database.py
src/upback/exceptions/: exceptions.py
src/upback/facades/: facade.py
src/upback/models/: models.py
src/upback/scheduled/: scheduled.py
src/upback/services/: synchronization_service.py
src/upback/static/css/: colors.css  fonts.css
src/upback/templates/: _navbar.html  add_tracked_app.html  index.html  settings.html  tracked_app.html  tracked_apps.html
src/upback/utils/: utils.py
src/utils/: utils.py
upback_data/: tracked_apps.db
