[project]
name = "upback"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "apscheduler>=3.11.2",
    "asgiref>=3.11.0",
    "cron-descriptor>=2.0.6",
    "flasgger>=0.9.7.1",
    "flask>=3.1.2",
    "flask-restx>=1.3.2",
    "uuid>=1.30",
    "uvicorn>=0.40.0",
]

[project.scripts]
upback = "upback.app:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.uv]
package = true